--- a/po/wesnoth-nr/en_GB.po
+++ b/po/wesnoth-nr/en_GB.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-09-12 16:44+1000\n"
+"PO-Revision-Date: 2019-01-27 23:16+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:9
@@ -132,6 +132,14 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:23
+#, fuzzy
+#| msgid ""
+#| "The dwarves of Knalga, cannily reckoning the gains from trade, built "
+#| "strong fortifications around Dwarven Doors. The people who called it "
+#| "home, dwarven and human alike, knew that the wealth of their city might "
+#| "arouse envy from afar — hence they kept their weapons sharp, and reckoned "
+#| "themselves well able to fight off any bandit gang or petty warlord that "
+#| "could arise in the thinly-settled Northlands."
 msgid ""
 "The dwarves of Knalga, cannily reckoning the gains from trade, built strong "
 "fortifications around Dwarven Doors. The people who called it home, dwarven "
@@ -276,7 +284,7 @@ msgstr ""
 "As quickly as it had begun, it was over. Konrad reached the entrance to the "
 "tunnels and ushered his men through. Then he turned one last time to face "
 "the peasants. Raising his sword in salute and farewell, he called out to "
-"them: <i>“Hold fast your hope, for one day you shall be free!”</i> Then he "
+"them: <i>‘Hold fast your hope, for one day you shall be free!’</i> Then he "
 "was gone."
 
 #. [part]
@@ -2375,6 +2383,11 @@ msgstr ""
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:744
+#, fuzzy
+#| msgid ""
+#| "If you have no objection, Tallin, we would like to join you. These "
+#| "Northlands are hardly safe these days for anyone to be traveling on their "
+#| "own, and we could lend valuable help to your cause."
 msgid ""
 "If you have no objection, Tallin, we would like to join you. These "
 "northlands are hardly safe these days for anyone to be traveling on their "
@@ -5289,8 +5302,8 @@ msgstr ""
 "Come on, guys, it will be great! Those orcs will never know what hit them! "
 "Together we’ll rip them to shreds! If you are planning to retire after this, "
 "this is the perfect chance for you guys to go out with a bang! You guys will "
-"become legends! <i>“The two terrible mages, risen from the dead to devastate "
-"the orcish hordes!”</i>"
+"become legends! <i>‘The two terrible mages, risen from the dead to devastate "
+"the orcish hordes!’</i>"
 
 #. [message]: speaker=Ro'Arthian
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:818
@@ -7037,14 +7050,20 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:240
+#, fuzzy
+#| msgid ""
+#| "Princess, we are not seeking to do business here: <i>“I do this for you "
+#| "and you do this for me.”</i> No, we seek to build everlasting friendships "
+#| "which will forever ensure the peace and prosperity of these Northlands. "
+#| "Therefore, let there be no talk of debts and repayments between us."
 msgid ""
 "Princess, we are not seeking to do business here: <i>“I do this for you and "
 "you do this for me.”</i> No, we seek to build everlasting friendships which "
 "will forever ensure the peace and prosperity of these northlands. Therefore, "
 "let there be no talk of debts and repayments between us."
 msgstr ""
-"Princess, we are not seeking to do business here: <i>“I do this for you and "
-"you do this for me.”</i> No, we seek to build everlasting friendships which "
+"Princess, we are not seeking to do business here: <i>‘I do this for you and "
+"you do this for me.’</i> No, we seek to build everlasting friendships which "
 "will for ever ensure the peace and prosperity of these Northlands. "
 "Therefore, let there be no talk of debts and repayments between us."
 
@@ -7309,8 +7328,8 @@ msgid ""
 msgstr ""
 "Tallin raised his eyes to look into Abhai’s and Abhai met his gaze — "
 "confidence meeting uncertainty, faith meeting doubt, assurance meeting "
-"apprehension. <i>“I have faith in you, my boy,”</i> Abhai said, <i>“Take "
-"this, and put your doubts at rest.”</i> Tallin held the gaze for one more "
+"apprehension. <i>‘I have faith in you, my boy,’</i> Abhai said, <i>‘Take "
+"this, and put your doubts at rest.’</i> Tallin held the gaze for one more "
 "long moment — and then took the Rod of Justice in a white-knuckled grip."
 
 #. [part]
@@ -9666,7 +9685,7 @@ msgid ""
 "No one leader will make the Warders a success; we will need the help of all "
 "of you."
 msgstr ""
-"No one leader will make the Warders a success; we will need the help of all "
+"No-one leader will make the Warders a success; we will need the help of all "
 "of you."
 
 #. [message]: id=Tallin
@@ -10549,6 +10568,9 @@ msgstr "Arthian"
 #~ msgid "Here is a similar door as the one before. I try to open it."
 #~ msgstr "Here is a similar door as the one before. I try to open it."
 
+#~ msgid "Turns run out"
+#~ msgstr "Turns run out"
+
 #~ msgid "Clear the mines"
 #~ msgstr "Clear the mines"
 
@@ -10608,9 +10630,6 @@ msgstr "Arthian"
 
 #~ msgid "‘The master’s study’ eh? I bet we’ll find Malifor there!"
 #~ msgstr "‘The master’s study’ eh? I bet we’ll find Malifor there!"
-
-#~ msgid "Turns run out"
-#~ msgstr "Turns run out"
 
 #~ msgid "Death of Tallin or Stalrag."
 #~ msgstr "Death of Tallin or Stalrag."
