--- a/po/wesnoth-sof/en_GB.po
+++ b/po/wesnoth-sof/en_GB.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2019-01-23 18:20+1100\n"
+"PO-Revision-Date: 2019-01-27 23:21+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -1240,6 +1240,12 @@ msgstr "Monsters"
 
 #. [part]
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:40
+#, fuzzy
+#| msgid ""
+#| "The journey to the far northern wastelands was long and perilous. For the "
+#| "tunnels were winding and treacherous, and the paths were not safe from "
+#| "orcs, or worse. Nevertheless, they did reach the Northlands, and began to "
+#| "search for the runesmith named Thursagan — the sage of fire."
 msgid ""
 "The journey to the far northern wastelands was long and perilous. For the "
 "tunnels were winding and treacherous, and the paths were not safe from orcs, "
@@ -1285,11 +1291,15 @@ msgid ""
 "His will probably be the only house up here. No one else is insane enough to "
 "live this far north! Even the elves won’t challenge us here."
 msgstr ""
-"His will probably be the only house up here. No one else is insane enough to "
+"His will probably be the only house up here. No-one else is insane enough to "
 "live this far north! Even the elves won’t challenge us here."
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:176
+#, fuzzy
+#| msgid ""
+#| "Except for trolls and ogres, right? They live in the far Northlands. "
+#| "They’re probably lurking around here somewhere."
 msgid ""
 "Except for trolls and ogres, right? They live in the far northlands. They’re "
 "probably lurking around here somewhere."
@@ -1579,6 +1589,8 @@ msgstr ""
 
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/3t_The_Council_Regathers.cfg:155
+#, fuzzy
+#| msgid "Yes, we did. And that is Krawg, who helped us in the Northlands."
 msgid "Yes, we did. And that is Krawg, who helped us in the northlands."
 msgstr "Yes, we did. And that is Krawg, who helped us in the Northlands."
 
@@ -3036,6 +3048,11 @@ msgstr "Who goes there?"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:300
+#, fuzzy
+#| msgid ""
+#| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
+#| "mission in the Northlands, and now elvish horsemen are chasing me. I "
+#| "barely evaded them."
 msgid ""
 "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a mission "
 "in the northlands, and now elvish horsemen are chasing me. I barely evaded "
@@ -3587,6 +3604,10 @@ msgstr "Halt! What is your business in Weldyn, capital of Wesnoth?"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:100
+#, fuzzy
+#| msgid ""
+#| "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from "
+#| "the Northlands."
 msgid ""
 "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from "
 "the northlands."
@@ -3622,6 +3643,10 @@ msgstr "Enter, Alanin, and give the king your message."
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:123
+#, fuzzy
+#| msgid ""
+#| "My King, fifteen years ago you sent me on a mission into the Northlands. "
+#| "I have returned. What do you wish to know of my mission?"
 msgid ""
 "My King, fifteen years ago you sent me on a mission into the northlands. I "
 "have returned. What do you wish to know of my mission?"
@@ -3913,13 +3938,9 @@ msgstr "Kraa..."
 #~ "You slow humans took too long, our detachment has already caught up with "
 #~ "you!"
 
-#~| msgid ""
-#~| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
-#~| "mission in the northlands, and now elvish horsemen are chasing me. I "
-#~| "barely evaded them."
 #~ msgid ""
 #~ "I’m a cavalier, with Haldric II’s personal bodyguard. I was sent on a "
-#~ "mission in the northlands, and now elvish horsemen are chasing me. I "
+#~ "mission in the Northlands, and now elvish horsemen are chasing me. I "
 #~ "barely evaded them."
 #~ msgstr ""
 #~ "I’m a cavalier, with Haldric II’s personal bodyguard. I was sent on a "
