--- a/po/wesnoth-trow/en_GB.po
+++ b/po/wesnoth-trow/en_GB.po
@@ -2617,7 +2617,7 @@ msgid ""
 "<i>“Bring these Wesfolk too? It would be... highly irregular.”</i> Bah! I’ll "
 "show you irregular..."
 msgstr ""
-"<i>“Bring these Wesfolk too? It would be... highly irregular.”</i> Bah! I’ll "
+"<i>‘Bring these Wesfolk too? It would be... highly irregular.’</i> Bah! I’ll "
 "show you irregular..."
 
 #. [message]: speaker=Ut'Tan-Vrork
@@ -4015,7 +4015,7 @@ msgstr ""
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/13_Peoples_in_Decline.cfg:232
 msgid "Do I need to say, <i>“I told you so”</i>?"
-msgstr "Do I need to say, <i>“I told you so”</i>?"
+msgstr "Do I need to say, <i>‘I told you so’</i>?"
 
 #. [event]
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/13_Peoples_in_Decline.cfg:250
@@ -4342,8 +4342,8 @@ msgid ""
 "half of what your people do, and still be rich, and I’m not the first to "
 "have the thought!"
 msgstr ""
-"Hmph! You namby-pamby elves: <i>“We don’t cut the trees, we groom the "
-"forest.”</i> Our axes can get the wood for a fifth of the cost! I can charge "
+"Hmph! You namby-pamby elves: <i>‘We don’t cut the trees, we groom the "
+"forest.’</i> Our axes can get the wood for a fifth of the cost! I can charge "
 "half of what your people do, and still be rich, and I’m not the first to "
 "have the thought!"
 
@@ -5487,9 +5487,9 @@ msgid ""
 msgstr ""
 "We are the people of the forest, you know that all words spoken to these un-"
 "people are of secondary importance to our own needs. As Lord Aryad said, "
-"<i>“If more trouble follows them here we should let them fight it out, then "
+"<i>‘If more trouble follows them here we should let them fight it out, then "
 "we should ‘deal’ with the survivors, and make a compromise with the "
-"Dwarves.”</i>"
+"Dwarves.’</i>"
 
 #. [message]: speaker=Lady Dionli
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/18_A_Spy_in_the_Woods.cfg:145
