--- a/po/wesnoth-aoi/en_GB.po
+++ b/po/wesnoth-aoi/en_GB.po
@@ -437,7 +437,7 @@ msgid ""
 "could build such a thing save us. I fear we have fallen prey a false sense "
 "of security that has injured the vigilance of our scouts."
 msgstr ""
-"I... I know not, my lord. For ages there was no one in these lands that "
+"I... I know not, my lord. For ages there was no-one in these lands that "
 "could build such a thing save us. I fear we have fallen prey a false sense "
 "of security that has injured the vigilance of our scouts."
 
@@ -614,7 +614,7 @@ msgid ""
 "Aim true, men, with wit and courage the day will be ours. And spare no-one, "
 "there can be no orc south of the hills, else we’ll never have peace again."
 msgstr ""
-"Aim true, men, with wit and courage the day will be ours. And spare no one, "
+"Aim true, men, with wit and courage the day will be ours. And spare no-one, "
 "there can be no orc south of the hills, else we’ll never have peace again."
 
 #. [message]: speaker=unit
@@ -660,7 +660,7 @@ msgstr ""
 msgid ""
 "It’s done, lord. No-one escaped. No-one tried to escape. I’m... disturbed."
 msgstr ""
-"It’s done, lord. No one escaped. No one tried to escape. I’m... disturbed."
+"It’s done, lord. No-one escaped. No-one tried to escape. I’m... disturbed."
 
 #. [message]: speaker=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:244
