--- a/po/wesnoth-multiplayer/en_GB.po
+++ b/po/wesnoth-multiplayer/en_GB.po
@@ -313,8 +313,8 @@ msgid ""
 msgstr ""
 "The <bold>text='Undead'</bold> are a faction of <ref>text='undead' dst='.."
 "race_undead'</ref> creatures and <ref>text='human' dst='..race_human'</ref> "
-"practitioners of dark arts that usually accompany them. Often, these “Dark "
-"Adepts” are the units that do the most damage for the faction, but they have "
+"practitioners of dark arts that usually accompany them. Often, these ‘Dark "
+"Adepts’ are the units that do the most damage for the faction, but they have "
 "a major vulnerability — their practising of this forbidden, evil magic has "
 "consumed all their energy and so they have no melee attack at all. The "
 "Undead are a very aggressive faction and the most powerful "
@@ -678,19 +678,19 @@ msgid ""
 "cave, and lay down to rest. He was awoken by a bone-chilling roar."
 msgstr ""
 "Xikkrisx of Syrsszk was a powerful Saurian warrior, sent to this region by "
-"the Elders of the Rysssrylosszkk Clan (translation: “The Hunts-Foes-In-"
-"Boiling-Rivers Clan”). The Elders were preparing to make war on a human "
+"the Elders of the Rysssrylosszkk Clan (translation: ‘The Hunts-Foes-In-"
+"Boiling-Rivers Clan’). The Elders were preparing to make war on a human "
 "outpost, and were in great need of the powerful magics of Oxsrrsk, a Saurian "
 "Mystic who had last been seen heading in the direction of Ruaskkolin Lake. "
 "Xikkrisx found the petrified body of Oxsrrsk, along with a carefully bound "
 "scroll that had apparently been dropped into a small crevice in the cave "
 "floor. He opened the scroll and read a brief passage from the middle of the "
-"text: “After he was bound and cast from the Upper World, Chak’kso’s enraged "
+"text: ‘After he was bound and cast from the Upper World, Chak’kso’s enraged "
 "spirit sought release, and was able to exert a corrupting influence on "
 "certain regions of the Upper World, channelled through ‘pathways of stone’ "
 "that extend from the surface into the depths of the Under Reaches. This rage "
 "altered the eggs of great lizards, shaping their bodies and spirits into "
-"implements of Chak’kso’s hatred.” Confused, Xikkrisx fixed his attention on "
+"implements of Chak’kso’s hatred.’ Confused, Xikkrisx fixed his attention on "
 "the task at hand. Thinking that perhaps the Elders could find some way to "
 "restore Oxsrrsk, he began the long and strenuous task of hauling the statue "
 "back to the domain of the Rysssrylosszkk Clan. Exhausted, and not having "
@@ -727,9 +727,9 @@ msgid ""
 msgstr ""
 "Oxsrrsk was a powerful Saurian Oracle, who had, in a raid against the rival "
 "Xraxss Clan, acquired (from the vaults of the now-dead Oracle Hesx-Rzzak) a "
-"most fascinating scroll. The scroll was entitled “Ney’yks of the Granite "
-"Gaze,” and told of a creature known as the “Chak’kso Ney’yks,” a name which, "
-"in an ancient saurian tongue, meant “Eldest Child of Chak’kso.” Chak’kso was "
+"most fascinating scroll. The scroll was entitled ‘Ney’yks of the Granite "
+"Gaze,’ and told of a creature known as the ‘Chak’kso Ney’yks,’ a name which, "
+"in an ancient saurian tongue, meant ‘Eldest Child of Chak’kso.’ Chak’kso was "
 "believed to have been a powerful demigod of the Under Reaches, described as "
 "a ‘great demon of the earth’ in the Elvish Histories. According to these "
 "histories, Chak’kso had once sought to transform all life on the planet to "
@@ -740,8 +740,8 @@ msgstr ""
 "any being of flesh into stone. There was a period when these Basilisks (as "
 "they came to be known) wreaked havoc on the world of the living, turning "
 "thousands to stone. One by one, and at great cost, the Basilisks were "
-"defeated. All, it would seem, but one; the Basilisk known as “The Ney’yks,” "
-"or “The Eldest Child,” in the modern tongue. Supremely convinced of his "
+"defeated. All, it would seem, but one; the Basilisk known as ‘The Ney’yks,’ "
+"or ‘The Eldest Child,’ in the modern tongue. Supremely convinced of his "
 "ability to locate and bind this powerful creature into his service, Oxsrrsk "
 "set out on his journey..."
 
@@ -857,7 +857,7 @@ msgid ""
 "It would seem that no one knows the tale of this brave spider.\n"
 "(inscribed by WinnerA)"
 msgstr ""
-"It would seem that no one knows the tale of this brave spider.\n"
+"It would seem that no-one knows the tale of this brave spider.\n"
 "(inscribed by WinnerA)"
 
 #. [unit]
@@ -920,7 +920,7 @@ msgstr ""
 "However, not long after, the local wose community heard of the approach of a "
 "horrible monster, powerful enough to easily destroy the few woses that lived "
 "in the area. They quickly moved off (quickly for Woses, anyway), but "
-"Bramwythl was left behind — in their haste, no one had remembered to find "
+"Bramwythl was left behind — in their haste, no-one had remembered to find "
 "him and tell him of the danger.\n"
 "He was taken quite unawares by the Basilisk, and turned to stone before he "
 "even recognized the beast. His petrified form still stands there today, "
@@ -957,10 +957,10 @@ msgid ""
 "\n"
 "Perhaps he should not have shouted quite so loudly..."
 msgstr ""
-"The last words spoken by Grand Marshal Aethec Corryn: “Talael Ryndoc! I am "
+"The last words spoken by Grand Marshal Aethec Corryn: ‘Talael Ryndoc! I am "
 "through searching for you! I shall make my way back to Haldric’s Hall, and "
 "inform the court that you were too much of a coward to attend our duel! Your "
-"disgrace shall be more agonizing than the death I’d have given you!”\n"
+"disgrace shall be more agonizing than the death I’d have given you!’\n"
 "\n"
 "Perhaps he should not have shouted quite so loudly...."
 
