--- a/po/wesnoth-help/en_GB.po
+++ b/po/wesnoth-help/en_GB.po
@@ -484,8 +484,8 @@ msgstr ""
 "\n"
 "A new map or file containing only the arguments to the map_data attribute.\n"
 "\n"
-"The produced map can be played in the “User Maps” game type at the create "
-"multiplayer game dialog if saved to the default directory.\n"
+"The produced map can be played in the ‘User Maps’ game type at the create "
+"multiplayer game dialogue if saved to the default directory.\n"
 "\n"
 "<bold>text='Embedded'</bold>"
 
@@ -500,7 +500,7 @@ msgid ""
 msgstr ""
 "\n"
 "Scenario files containing a valid map_data attribute (not a file include) "
-"will be opened in this submode. The editor replaces only the content of "
+"will be opened in this sub-mode. The editor replaces only the content of "
 "map_data and leaves everything else in the scenario untouched. Maps opened "
 "this way are marked [e] in the Maps menu."
 
@@ -819,7 +819,7 @@ msgstr ""
 "The name of the world in which the kingdom of <ref>dst='kingdom_wesnoth' "
 "text='Wesnoth'</ref> is situated is ‘Irdya’. This term is, however, only "
 "rarely used in the era depicted by the main map. People normally just say "
-"“the world” or, poetically, “the wide green world”."
+"‘the world’ or, poetically, ‘the wide green world’."
 
 #. [topic]: id=kingdom_wesnoth
 #: data/core/encyclopedia/geography.cfg:76
@@ -5096,7 +5096,7 @@ msgstr ""
 "siblings to the orcs and members of the same race. While other races usually "
 "bear children singly or in pairs, orcs will have large litters of children "
 "all at once, causing their populations to explode. Within any litter, there "
-"will be only one or two who grow to the strength of a “true orc”, a few who "
+"will be only one or two who grow to the strength of a ‘true orc’, a few who "
 "are born slightly smaller and weaker, and the rest, often a full half of any "
 "litter, are much weaker and destined to be goblins. Almost as newborns the "
 "class system of orcish society is visible, with the weak put in their place "
@@ -5953,10 +5953,10 @@ msgstr ""
 "— other Saurian clans.\n"
 "\n"
 "New Saurian clans are started when the proper astrological signs are read. "
-"Called a “hatching,” each female indicated by the conjunction selects a "
+"Called a ‘hatching,’ each female indicated by the conjunction selects a "
 "group of individuals with lower rank and leave their source clan. Frequently "
 "all females with a specific trait will be indicated, causing multiple clans "
-"to “hatch” at the same time. Selection is a simple process: no group leaving "
+"to ‘hatch’ at the same time. Selection is a simple process: no group leaving "
 "can be larger than any other, all the groups together cannot be larger than "
 "the group being left, and higher ranking allows a female to overrule another "
 "female's choice of who they take.\n"
@@ -6067,7 +6067,7 @@ msgid ""
 "wilderness, ocean depths, and other climes of the world. They figure largely "
 "in the tales and nightmares of its denizens, as well."
 msgstr ""
-"The term “monster” incorporates many hideous beasts that haunt the caves, "
+"The term ‘monster’ incorporates many hideous beasts that haunt the caves, "
 "wilderness, ocean depths, and other climes of the world. They figure largely "
 "in the tales and nightmares of its denizens, as well."
 
@@ -6242,7 +6242,7 @@ msgstr ""
 "\n"
 "<header>text='Society'</header>\n"
 "Almost every orc is a member of a tribe or a clan. Relations between "
-"neighboring tribes are usually violent, except in cases of a mutual enemy "
+"neighbouring tribes are usually violent, except in cases of a mutual enemy "
 "threatens their existence or prospects of great plunder override mutual "
 "animosity. Occasionally, a single strong chieftain may emerge to lead "
 "multiple tribes from time to time, usually through intimidation of "
@@ -6252,11 +6252,11 @@ msgstr ""
 "it’s most commonly used to trade insults or threats among tribal leaders.\n"
 "\n"
 "Orc societies are based on little else but strength; might makes right, and "
-"a leader leads and survives only as long as no one manages to wrest the "
+"a leader leads and survives only as long as no-one manages to wrest the "
 "title from him. A constant struggle for power simmers among potential tribal "
 "chiefs. An orcish leader rarely lives more than a handful of years to enjoy "
 "his absolute authority before being killed for his position — although "
-"history knows some notable exceptions. Orcs hold no particular honor code "
+"history knows some notable exceptions. Orcs hold no particular honour code "
 "and while indisputable raw strength is usually the preferred method of "
 "displaying power, assassination, poisoning and backstabbing are completely "
 "viable means to further one’s own goals.\n"
