--- a/po/wesnoth-httt/en_GB.po
+++ b/po/wesnoth-httt/en_GB.po
@@ -4041,7 +4041,7 @@ msgid ""
 "You speak foolishness. No one even knows if the Sceptre of Fire still "
 "exists. And who is this heir, this king that you speak of?"
 msgstr ""
-"You speak foolishness. No one even knows if the Sceptre of Fire still "
+"You speak foolishness. No-one even knows if the Sceptre of Fire still "
 "exists. And who is this heir, this king that you speak of?"
 
 #. [message]: speaker=Konrad
@@ -7557,7 +7557,7 @@ msgid ""
 "have the throne."
 msgstr ""
 "Parandra, what you say may seem right to some, but as long as you and I "
-"speak to no one of what we know, I see no reason why Konrad would not best "
+"speak to no-one of what we know, I see no reason why Konrad would not best "
 "have the throne."
 
 #. [message]: speaker=Parandra
@@ -8312,8 +8312,8 @@ msgstr ""
 "After burying the little prince, we agreed never to speak of him again. "
 "Instead, this orphan child we would call Konrad, and he would be brought up "
 "to be king. I would say that I had slain the guards before they had carried "
-"out their evil deed, instead of after. No one would ever have to know. And "
-"no one did know for certain, until now."
+"out their evil deed, instead of after. No-one would ever have to know. And "
+"no-one did know for certain, until now."
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/scenarios/24_Battle_for_Wesnoth.cfg:83
@@ -8484,7 +8484,7 @@ msgid ""
 "You were always defiant, wizard, and no one has thwarted my plans as "
 "determinedly as you."
 msgstr ""
-"You were always defiant, wizard, and no one has thwarted my plans as "
+"You were always defiant, wizard, and no-one has thwarted my plans as "
 "determinedly as you."
 
 #. [message]: speaker=Delfador
@@ -9175,8 +9175,8 @@ msgid ""
 "whose head should be severed from his shoulders.”</i>"
 msgstr ""
 "Eldred made war upon Delfador and his forces with his mother’s advice "
-"ringing in his ears: <i>“Fight no one great or small except the old mage, "
-"whose head should be severed from his shoulders.”</i>"
+"ringing in his ears: <i>‘Fight no-one great or small except the old mage, "
+"whose head should be severed from his shoulders.’</i>"
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/utils/intro.cfg:36
