--- a/po/wesnoth-l/en_GB.po
+++ b/po/wesnoth-l/en_GB.po
@@ -1516,7 +1516,7 @@ msgid ""
 "you have done great service to us today, and we owe you a debt. I will help "
 "you to the utmost of my ability."
 msgstr ""
-"No one here is in a position to be dispensing moral judgements. Regardless, "
+"No-one here is in a position to be dispensing moral judgements. Regardless, "
 "you have done great service to us today, and we owe you a debt. I will help "
 "you to the utmost of my ability."
 
@@ -1755,7 +1755,7 @@ msgid ""
 msgstr ""
 "I am afraid it is not. The Queen is sending a branch of her main field army "
 "directly from Weldyn. As soon as they arrive, they will burn every village "
-"to the ground. No one will live."
+"to the ground. No-one will live."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:189
@@ -1805,8 +1805,8 @@ msgid ""
 "the army of the usurper. Strike fast, strike silently... and leave no one "
 "alive."
 msgstr ""
-"When we are done, no one will fear the open roads and night sky more than "
-"the army of the usurper. Strike fast, strike silently... and leave no one "
+"When we are done, no-one will fear the open roads and night sky more than "
+"the army of the usurper. Strike fast, strike silently... and leave no-one "
 "alive."
 
 #. [message]: speaker=Linneus
@@ -2224,7 +2224,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:741
 msgid "No one inside the fortress would make it out alive."
-msgstr "No one inside the fortress would make it out alive."
+msgstr "No-one inside the fortress would make it out alive."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:811
@@ -2248,7 +2248,7 @@ msgid ""
 "No one was able to get to Baldras in time. He and many of his companions "
 "died that day beneath the stronghold of Halstead."
 msgstr ""
-"No one was able to get to Baldras in time. He and many of his companions "
+"No-one was able to get to Baldras in time. He and many of his companions "
 "died that day beneath the stronghold of Halstead."
 
 #. [message]: speaker=Baldras
@@ -2442,8 +2442,8 @@ msgid ""
 "... a grimy note nailed to a charred post that read, <i>“Baldras, You would "
 "have been proud. We gave ’em hell. But in the end, it wasn’t enough.”</i>"
 msgstr ""
-"... a grimy note nailed to a charred post that read, <i>“Baldras, You would "
-"have been proud. We gave ’em hell. But in the end, it wasn’t enough.”</i>"
+"... a grimy note nailed to a charred post that read, <i>‘Baldras, You would "
+"have been proud. We gave ’em hell. But in the end, it wasn’t enough.’</i>"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:40
@@ -2451,8 +2451,8 @@ msgid ""
 "<i>“We fled like criminals in the night, but we made sure that no one would "
 "harass us anymore.”</i>"
 msgstr ""
-"<i>“We fled like criminals in the night, but we made sure that no one would "
-"harass us any more.”</i>"
+"<i>‘We fled like criminals in the night, but we made sure that no-one would "
+"harass us any more.’</i>"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:44
@@ -2460,8 +2460,8 @@ msgid ""
 "<i>“If you wish to find us, head southwest. When you reach the land’s end, "
 "just keep going. See you in the Three Sisters, old friend. ― Relana”</i>"
 msgstr ""
-"<i>“If you wish to find us, head south-west. When you reach the land’s end, "
-"just keep going. See you in the Three Sisters, old friend. ― Relana”</i>"
+"<i>‘If you wish to find us, head south-west. When you reach the land’s end, "
+"just keep going. See you in the Three Sisters, old friend. ― Relana’</i>"
 
 #. [unit_type]: id=Bone Knight, race=undead
 #: data/campaigns/Liberty/units/Bone_Knight.cfg:5
