--- a/po/wesnoth-units/en_GB.po
+++ b/po/wesnoth-units/en_GB.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2019-01-23 18:41+1100\n"
+"PO-Revision-Date: 2019-01-27 23:25+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -993,7 +993,7 @@ msgstr ""
 "Only a few manage to gain the skill and power necessary to be admitted to "
 "this highest rank without perishing in battle. Though other drakes may "
 "disparage the Fighter caste, they always check twice to be sure none are "
-"around; Blademasters fiercely protect their fellows' honour, and no one "
+"around; Blademasters fiercely protect their fellows' honour, and no-one "
 "would dispute their right to do so."
 
 #. [attack]: type=blade
@@ -2143,16 +2143,6 @@ msgstr "Elvish Archer"
 
 #. [unit_type]: id=Elvish Archer, race=elf
 #: data/core/units/elves/Archer.cfg:19
-#, fuzzy
-#| msgid ""
-#| "As primarily foragers and hunters, most elves learn to become proficient "
-#| "archers from a young age. Besides being only a practical skill, archery "
-#| "is also a common pasttime and many competitions are held in sport for the "
-#| "entertainment of spectators and participants alike. This ability is "
-#| "readily turned to battle in times of war, where many elves will wield "
-#| "bows as their weapons of choice. Though not as sturdy as their human or "
-#| "orc counterparts, Elvish archers are still effective combatants, "
-#| "especially when fighting from the safety of their forests."
 msgid ""
 "As primarily foragers and hunters, most elves learn to become proficient "
 "archers from a young age. Besides being only a practical skill, archery is "
@@ -2987,7 +2977,7 @@ msgid ""
 "mounts have a rather easy time traversing the mountains, though water and "
 "woods will still slow them down."
 msgstr ""
-"No one is quite sure how the practice of taming and riding wolves came into "
+"No-one is quite sure how the practice of taming and riding wolves came into "
 "being, but the advantages of it for a goblin are obvious. Goblins are "
 "smaller and much weaker than their orcish kin, and are often tasked to the "
 "most dangerous and unwanted parts of a fight. Any who can manage to win "
@@ -4870,7 +4860,7 @@ msgid ""
 "their bidding. When not being controlled they like to frolic in pools of "
 "lava and take great delight in burning anything they can reach."
 msgstr ""
-"Fire Guardians are spirits of smoke and flame. No one is exactly sure where "
+"Fire Guardians are spirits of smoke and flame. No-one is exactly sure where "
 "they come from, but they are occasionally summoned by powerful mages to do "
 "their bidding. When not being controlled they like to frolic in pools of "
 "lava and take great delight in burning anything they can reach."
@@ -5420,7 +5410,7 @@ msgid ""
 msgstr ""
 "A blade in the dark, dripping with poison — for many orcish warlords the "
 "last thing they see. Due to their high fees, orcish nightblades specialize "
-"in “resolving internal conflicts” and are rarely seen on the battlefield. "
+"in ‘resolving internal conflicts’ and are rarely seen on the battlefield. "
 "Practice makes perfect, and few can rival them in that regard: they have "
 "long lost count of their victims, though that admittedly isn’t too hard for "
 "an orc with only ten fingers."
@@ -6779,7 +6769,7 @@ msgstr ""
 #~ "real assault.\n"
 #~ "\n"
 #~ "Some speculate that the existence of these creatures is the beginning of "
-#~ "a failure of the orcish bloodline, though no one knows enough of their "
+#~ "a failure of the orcish bloodline, though no-one knows enough of their "
 #~ "history to state anything conclusive."
 
 #~ msgid ""
