--- a/po/wesnoth-utbs/en_GB.po
+++ b/po/wesnoth-utbs/en_GB.po
@@ -613,7 +613,7 @@ msgstr "Yuni"
 #. [message]: speaker=Zhul
 #: data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg:698
 msgid "Finally! We were worried that no one else had survived."
-msgstr "Finally! We were worried that no one else had survived."
+msgstr "Finally! We were worried that no-one else had survived."
 
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg:703
@@ -1076,10 +1076,10 @@ msgid ""
 msgstr ""
 "Last night, before the rock storm, I heard a voice in my sleep. It sounded "
 "like sweet music, and somehow I knew it was Eloh. I still remember her exact "
-"words: <i>“You must be strong, young elf, for you enter a time of peril. The "
+"words: <i>‘You must be strong, young elf, for you enter a time of peril. The "
 "home you know will be destroyed, and you must lead your people to a new "
 "land. To the north you will find salvation and peace. Cross the desert and "
-"head to the mountains. Fear not, for I will guide you and protect you.”</i> "
+"head to the mountains. Fear not, for I will guide you and protect you.’</i> "
 "I’m not sure why I’m the one she chose to appeal to, but if this is her "
 "will, I will see it done. Our home is gone and the desert is a harsh place. "
 "If Eloh has prepared a new home for us, then I will lead us there."
@@ -3429,6 +3429,15 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:819
+#, fuzzy
+#| msgid ""
+#| "How odd. Someone has carved a crude fountain out of the stone at the end "
+#| "of the passage. The freezing water pours out into a large pool. At the "
+#| "bottom of the pool I can see a skeleton still gripping a sword. The blade "
+#| "seems to glow faintly blue. The pool isn’t very deep, I could easily wade "
+#| "in and pick it up. But someone else has carved a crude message in the "
+#| "wall. <i>“If you dare to take this blade here, your greatest fear will "
+#| "surely appear.’</i> It looks like a nice sword, but do I dare chance it?"
 msgid ""
 "How odd. Someone has carved a crude fountain out of the stone at the end of "
 "the passage. The freezing water pours out into a large pool. At the bottom "
@@ -3442,8 +3451,8 @@ msgstr ""
 "the passage. The freezing water pours out into a large pool. At the bottom "
 "of the pool I can see a skeleton still gripping a sword. The blade seems to "
 "glow faintly blue. The pool isn’t very deep, I could easily wade in and pick "
-"it up. But someone else has carved a crude message in the wall. <i>“If you "
-"dare to take this blade here, your greatest fear will surely appear.”</i> It "
+"it up. But someone else has carved a crude message in the wall. <i>‘If you "
+"dare to take this blade here, your greatest fear will surely appear.’</i> It "
 "looks like a nice sword, but do I dare chance it?"
 
 #. [option]
@@ -6070,8 +6079,8 @@ msgstr ""
 "dwarf. The tomb seems empty except for this ornate stone coffin. The "
 "skeleton inside the coffin has long since vanished into dust. All that’s "
 "left are a few ceremonial trinkets and this shining golden belt. Inscribed "
-"on this inside are the words: <i>“May you have the toughness to stay "
-"standing long after your enemies fall.”</i> Grave robbing is never a good "
+"on this inside are the words: <i>‘May you have the toughness to stay "
+"standing long after your enemies fall.’</i> Grave robbing is never a good "
 "thing to do, but this belt looks magical and its former owner certainly "
 "won’t miss it."
 
@@ -8218,7 +8227,7 @@ msgid ""
 "noticed me, no I was too sneaky. And you wondered how I managed to follow "
 "you through the tunnels? Hah, you escorted me."
 msgstr ""
-"I was able to follow your trail, and I slipped among your people. No one "
+"I was able to follow your trail, and I slipped among your people. No-one "
 "noticed me, no, I was too sneaky. And you wondered how I managed to follow "
 "you through the tunnels? Hah, you escorted me."
 
@@ -10982,8 +10991,8 @@ msgid ""
 msgstr ""
 "Oh Eloh, you know how long I have faithfully served you. I ask you now a "
 "boon in return. Do not kill the boy Kaleh, he is just doing what his heart "
-"tells him to do. Did you not say, <i>“To err is elven, but to forgive "
-"divine”</i>?"
+"tells him to do. Did you not say, <i>‘To err is elven, but to forgive "
+"divine’</i>?"
 
 #. [message]: speaker=Eloh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg:2013
@@ -12274,7 +12283,7 @@ msgstr ""
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/10_Speaking_with_the_Fishes.cfg:482
 msgid "No, no, no one is blaming you, Kaleh."
-msgstr "No, no, no one is blaming you, Kaleh."
+msgstr "No, no, no-one is blaming you, Kaleh."
 
 #. [message]: speaker=Zhul
 #: data/campaigns/Under_the_Burning_Suns/scenarios/10_Speaking_with_the_Fishes.cfg:487
@@ -14453,7 +14462,7 @@ msgid ""
 "we were born among the sands we can thrive anywhere we have the will to live."
 msgstr ""
 "Although I am not as devout as Zhul is, I thank Eloh every day that Nym "
-"survived that horrible battle in the Black Citadel. No one has been more "
+"survived that horrible battle in the Black Citadel. No-one has been more "
 "enthusiastic than she in embracing our life among the islands. She delights "
 "in swimming and sailing among the shallows and spends so much time in the "
 "water that sometimes I think she is half mermaid herself. Her sparkling "
@@ -14813,7 +14822,7 @@ msgid ""
 "This thing is impossible to describe, no one has seen anything like it "
 "before."
 msgstr ""
-"This thing is impossible to describe; no one has seen anything like it "
+"This thing is impossible to describe; no-one has seen anything like it "
 "before."
 
 #. [attack]: type=cold
@@ -15083,7 +15092,7 @@ msgid ""
 "where he came from or why he acts the way he does, but the trail of death he "
 "leaves in his wake is unmistakeable."
 msgstr ""
-"The Dark Assassin appears and disappears at a moment’s notice. No one knows "
+"The Dark Assassin appears and disappears at a moment’s notice. No-one knows "
 "where he came from or why he acts the way he does, but the trail of death he "
 "leaves in his wake is unmistakable."
 
@@ -15761,7 +15770,7 @@ msgid ""
 "sight to behold. Crawling around on huge skeletal legs, and wielding huge "
 "magical staves, these abominations are fearsome undead foes. "
 msgstr ""
-"No one is quite sure how spider liches are created, but they are a horrific "
+"No-one is quite sure how spider liches are created, but they are a horrific "
 "sight to behold. Crawling around on huge skeletal legs, and wielding huge "
 "magical staves, these abominations are fearsome undead foes. "
 
@@ -16302,7 +16311,7 @@ msgid ""
 msgstr ""
 "That night, as I slept, I dreamt again, for the first time since that first "
 "fateful night. Eloh came to me again, and this time she appeared in a vision "
-"as a beautiful glowing figure, as bright as the suns. She said <i>“Have "
+"as a beautiful glowing figure, as bright as the suns. She said <i>‘Have "
 "courage, for though soon you shall go through a time of darkness, all your "
 "trials shall be richly rewarded in the end. You must go under the northern "
 "mountains, not over them. You will find the ruins of an ancient watch tower "
@@ -16312,7 +16321,7 @@ msgstr ""
 "my suns, I shall contact you. But beware those who lurk in the darkness, "
 "they hide from my light, and must not be trusted. I have no power in the "
 "dark, so you are my hand of justice. Punish the non-believers. Go now, and "
-"fear not the dark.”</i> And again, just like before, I was woken up by a "
+"fear not the dark.’</i> And again, just like before, I was woken up by a "
 "shout in the night."
 
 #. [part]
@@ -16947,7 +16956,7 @@ msgstr ""
 "faces were missing. Barely a fourth of those who set out with us on our "
 "journey had survived. If I had known it would be this bad would I have ever "
 "left in the first place? I thought Eloh was protecting us and guiding our "
-"steps, but in truth it was all me. For better or for worse I have no one to "
+"steps, but in truth it was all me. For better or for worse I have no-one to "
 "blame but myself."
 
 #. [part]
