updated Ukrainian translation

--- a/po/wesnoth-ai/uk.po
+++ b/po/wesnoth-ai/uk.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:29 UTC\n"
-"PO-Revision-Date: 2018-09-29 03:28+0300\n"
-"Last-Translator: AncientGeneral <greatgeneral12@gmail.com>\n"
+"PO-Revision-Date: 2019-01-29 14:19+0200\n"
+"Last-Translator: AncientGeneral <greatgeneral12 {AT} gmail.com>\n"
 "Language-Team: \n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
@@ -23,12 +23,12 @@ msgstr ""
 #. [ai]: id=ai_default_rca
 #: data/ai/ais/ai_default_rca.cfg:9
 msgid "Multiplayer_AI^Default AI (RCA)"
-msgstr ""
+msgstr "Типовий AI (RCA)"
 
 #. [ai]: id=experimental_ai
 #: data/ai/ais/ai_generic_rush.cfg:10
 msgid "Multiplayer_AI^Experimental AI"
-msgstr ""
+msgstr "Експериментальний AI"
 
 #. [ai]: id=idle_ai
 #: data/ai/ais/idle_ai.cfg:4
@@ -262,7 +262,7 @@ msgstr ""
 #: data/ai/micro_ais/scenarios/animals.cfg:27
 #: data/ai/micro_ais/scenarios/scenario_micro_ai.cfg:45
 msgid "Animals"
-msgstr ""
+msgstr "Тварини"
 
 #. [side]: id=Rutburt, type=Outlaw
 #: data/ai/micro_ais/scenarios/animals.cfg:41
@@ -284,7 +284,7 @@ msgstr "Люди"
 #. [side]
 #: data/ai/micro_ais/scenarios/animals.cfg:63
 msgid "Forest Creatures"
-msgstr ""
+msgstr "Лісові створіння"
 
 #. [side]
 #: data/ai/micro_ais/scenarios/animals.cfg:77
@@ -497,7 +497,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/ai/micro_ais/scenarios/bottleneck_defense.cfg:118
 msgid "Defeat all humans"
-msgstr ""
+msgstr "Переможіть всіх людей"
 
 #. [objective]: condition=lose
 #: data/ai/micro_ais/scenarios/bottleneck_defense.cfg:122
@@ -879,7 +879,7 @@ msgstr ""
 #: data/ai/micro_ais/scenarios/guardians.cfg:17
 #: data/ai/micro_ais/scenarios/scenario_micro_ai.cfg:57
 msgid "Guardians"
-msgstr ""
+msgstr "Вартові"
 
 #. [side]: id=Kraa, type=Gryphon
 #: data/ai/micro_ais/scenarios/guardians.cfg:31
@@ -976,7 +976,7 @@ msgstr ""
 #. [unit]: type=Naga Fighter, id=zone3
 #: data/ai/micro_ais/scenarios/guardians.cfg:383
 msgid "Water Guardian"
-msgstr ""
+msgstr "Водяний страж"
 
 #. [event]
 #: data/ai/micro_ais/scenarios/guardians.cfg:402
@@ -1157,7 +1157,7 @@ msgstr ""
 #: data/ai/micro_ais/scenarios/guardians.cfg:527
 #: data/ai/micro_ais/scenarios/patrols.cfg:233
 msgid "Defeat all enemy units"
-msgstr ""
+msgstr "Вбийте всіх бійців противника"
 
 #. [objective]: condition=win
 #: data/ai/micro_ais/scenarios/guardians.cfg:531
@@ -1167,7 +1167,7 @@ msgstr ""
 #. [objective]: condition=lose
 #: data/ai/micro_ais/scenarios/guardians.cfg:535
 msgid "Death of Kraa"
-msgstr ""
+msgstr "Смерть Краа"
 
 #. [note]
 #: data/ai/micro_ais/scenarios/guardians.cfg:539
