--- a/po/wesnoth-editor/uk.po
+++ b/po/wesnoth-editor/uk.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
-"PO-Revision-Date: 2018-10-28 19:23+0200\n"
-"Last-Translator: AncientGeneral <greatgeneral12@gmail.com>\n"
+"PO-Revision-Date: 2019-01-29 14:29+0200\n"
+"Last-Translator: AncientGeneral <greatgeneral12 {AT} gmail.com>\n"
 "Language-Team: \n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
@@ -24,7 +24,7 @@ msgstr ""
 #. [brush]: id=brush-1
 #: data/core/editor/brushes.cfg:6
 msgid "Single Hex"
-msgstr "Одиночне поле"
+msgstr "Одиночна клітинка"
 
 #. [brush]: id=brush-2
 #: data/core/editor/brushes.cfg:16
@@ -503,9 +503,8 @@ msgid "BG: "
 msgstr "Тло:"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:137
-#, fuzzy
 msgid "Clipboard support not found, contact your packager"
-msgstr "Підтримка буферу обміну не знайдено, зв'яжіться з вашим packager"
+msgstr "Підтримка буферу обміну не знайдена, зв'яжіться з менеджером пакету"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:201
 msgid "Choose File"
