updated Ukrainian translation

--- a/po/wesnoth-anl/uk.po
+++ b/po/wesnoth-anl/uk.po
@@ -8,15 +8,16 @@ msgstr ""
 "Project-Id-Version: 1.10\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-16 07:03 UTC\n"
-"PO-Revision-Date: 2012-08-18 19:31+0200\n"
-"Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2019-01-29 14:09+0200\n"
+"Last-Translator: AncientGeneral <greatgeneral12 {AT} gmail.com>\n"
+"Language-Team: \n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. [multiplayer]: id=multiplayer_A_New_Land
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:4
@@ -31,7 +32,7 @@ msgid ""
 msgstr ""
 "Сценарій на виживання для 4 гравців дозволяє будувати будівлі і "
 "видозмінювати місцевість. Використовуйте параметри карти. Рекомендоване "
-"стартове золото - 100."
+"стартове золото — 100."
 
 #. [part]
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:26
@@ -63,10 +64,8 @@ msgstr "Протримайтесь 25 ходів."
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:72
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:88
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:104
-#, fuzzy
-#| msgid "teamname^Team 1"
 msgid "teamname^Settlers"
-msgstr "Команда 1"
+msgstr "Колоністи"
 
 #. [side]: type=Death Knight
 #. [side]: type=Orcish Sovereign
@@ -74,37 +73,33 @@ msgstr "Команда 1"
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:155
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:186
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:217
-#, fuzzy
-#| msgid "teamname^Team 1"
 msgid "teamname^Enemies"
-msgstr "Команда 1"
+msgstr "Вороги"
 
 #. [side]: type=Death Knight
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:133
 msgid "Mal Sevu"
-msgstr ""
+msgstr "Мал Севу"
 
 #. [side]: type=Orcish Sovereign
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:164
 msgid "Gol Goroth"
-msgstr ""
+msgstr "Гол Горос"
 
 #. [side]: type=Orcish Sovereign
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:195
 msgid "Greg"
-msgstr ""
+msgstr "Грег"
 
 #. [side]: type=Death Knight
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:226
 msgid "Mal Shiki"
-msgstr ""
+msgstr "Мал Шікі"
 
 #. [side]
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:252
-#, fuzzy
-#| msgid "teamname^Team 1"
 msgid "teamname^Prisoners"
-msgstr "Команда 1"
+msgstr "В'язні"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:433
@@ -208,7 +203,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:708
 msgid "You have won the game, but you may continue if you wish..."
-msgstr "Ви перемогли, але якщо хочете - можете продовжити..."
+msgstr "Ви перемогли, але якщо хочете — можете продовжити..."
 
 #. [message]: speaker=unit
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:724
@@ -249,7 +244,7 @@ msgid ""
 "peasant allows you to terraform the landscape and/or build castles, mines, "
 "farms, villages and universities."
 msgstr ""
-"Селяни - це ваші робітники. Натискання правої кнопки миші на будь-якому з "
+"Селяни — це ваші робітники. Натискання правої кнопки миші на будь-якому з "
 "них в залежності від типу поверхні дозволить вам видозмінювати ландшафт і/"
 "або будувати замки, копальні, ферми та університети."
 
@@ -266,7 +261,7 @@ msgid ""
 "Mages are your wise men. They can study at universities, pursuing advances "
 "in mining, farming and recruitment."
 msgstr ""
-"Маги - це ваші мудреці. Вони можуть займатися наукою в університетах, "
+"Маги — це ваші мудреці. Вони можуть займатися наукою в університетах, "
 "поліпшувати гірничу справу, сільське господарство та вербування."
 
 #. [message]: speaker=narrator
