--- a/po/wesnoth-tutorial/uk.po
+++ b/po/wesnoth-tutorial/uk.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:30 UTC\n"
-"PO-Revision-Date: 2018-11-07 10:54+0200\n"
-"Last-Translator: AncientGeneral <greatgeneral12@gmail.com>\n"
+"PO-Revision-Date: 2019-02-01 16:41+0200\n"
+"Last-Translator: AncientGeneral <greatgeneral12 {AT} gmail.com>\n"
 "Language-Team: \n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
@@ -153,6 +153,8 @@ msgstr "Клацніть на Лі'сар"
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:316
 msgid "To undo your last move, press <b>u</b> or use the right-click menu."
 msgstr ""
+"Натисніть <b>u</b> або використайте правий клік миші для відміни останнього "
+"руху."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:357
@@ -170,6 +172,12 @@ msgid ""
 "simply click on Konrad and then your destination. (You can press <b>u</b> to "
 "undo a move if you move to the wrong place.)"
 msgstr ""
+"Коли ви наводите мишу на бійця, у цьому випадку Конрада, або вибираєте його, "
+"підсвічуються місця, куди він може походити. Усі бійці мають певну кількість "
+"<i>очок руху</i>, які визначають як далеко може походити боєць. Зазвичай, "
+"одна клітинка плоскої місцевості використовує одне очко руху. Щоб здійснити "
+"пересування, просто клікніть на Конраді, і потім на клітинку призначення. "
+"(Якщо ви походили не туди, ви можете відмінити хід, натиснувши <b>u</b>.)"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:367
@@ -181,6 +189,12 @@ msgid ""
 "simply click on Li’sar and then your destination. (You can press <b>u</b> to "
 "undo a move if you move to the wrong place.)"
 msgstr ""
+"Коли ви наводите мишу на бійця, у цьому випадку Ліʼсар, або вибираєте його, "
+"підсвічуються місця, куди він може походити. Усі бійці мають певну кількість "
+"<i>очок руху</i>, які визначають як далеко може походити боєць. Зазвичай, "
+"одна клітинка плоскої місцевості використовує одне очко руху. Щоб здійснити "
+"пересування, просто клікніть на Ліʼсар, і потім на клітинку призначення. "
+"(Якщо ви походили не туди, ви можете відмінити хід, натиснувши <b>u</b>.)"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:378
@@ -323,7 +337,7 @@ msgid ""
 "leader. In most scenarios, you will lose if your leader is killed. Be sure "
 "to keep him safe!"
 msgstr ""
-"Маленька золота коронка над Конрадом вказує, що він - лідер своєї сторони. У "
+"Маленька золота коронка над Конрадом вказує, що він — лідер своєї сторони. У "
 "більшості сценаріїв, ви програєте, якщо вашого лідера вб'ють. Бережіть його!"
 
 #. [message]: speaker=narrator
@@ -333,7 +347,7 @@ msgid ""
 "leader. In most scenarios, you will lose if your leader is killed. Be sure "
 "to keep her safe!"
 msgstr ""
-"Маленька золота коронка над Лі'сар вказує, що вона - лідер своєї сторони. У "
+"Маленька золота коронка над Лі'сар вказує, що вона — лідер своєї сторони. У "
 "більшості сценаріїв, ви програєте, якщо вашого лідера вб'ють. Бережіть її!"
 
 #. [message]: speaker=Delfador
@@ -859,7 +873,7 @@ msgstr "Сподіваюся, після цього я зможу відступ
 #. [event]
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:120
 msgid "One lucky attack by an Orcish Grunt, and I’m done for!"
-msgstr "Одна вдачна атака орка-піхотинця - і мені гаплик!"
+msgstr "Одна вдачна атака орка-піхотинця — і мені гаплик!"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:121
@@ -880,7 +894,7 @@ msgstr "Сподіваюся, після цього я зможу відступ
 #. [event]
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:124
 msgid "female^One lucky attack by an Orcish Grunt, and I’m done for!"
-msgstr "Одна вдачна атака орка-піхотинця - і мені гаплик!"
+msgstr "Одна вдачна атака орка-піхотинця — і мені гаплик!"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:125
@@ -1005,10 +1019,10 @@ msgid ""
 "the east; but we could stand on the shore and force them to fight us from "
 "the water, where they are exposed and we are protected by the forest."
 msgstr ""
-"Бачиш цю темно-синю воду? Вона занадто глибока - ні ми, ні вони не зможемо "
+"Бачиш цю темно-синю воду? Вона занадто глибока — ні ми, ні вони не зможемо "
 "по ній пройти. Вони можуть повільно йти по вузькій смужці мілководдя на "
 "сході(світло-синя вода); але ми можемо зайняти узбережжя і змусити їх битися "
-"у воді - так що вони будуть вразливі, ми ж - під захистом лісу."
+"у воді — так що вони будуть вразливі, ми ж — під захистом лісу."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:222
@@ -1017,7 +1031,7 @@ msgid ""
 "the key: it has a village for healing injured units and forests in which we "
 "fight so well."
 msgstr ""
-"Так що вони, швидше за все, атакуватимуть по мосту. Острів в центрі - ключ "
+"Так що вони, швидше за все, атакуватимуть по мосту. Острів в центрі — ключ "
 "до битви: там є село, де можна лікувати поранених, і ліс, де ми добре "
 "б'ємося."
 
@@ -1254,6 +1268,13 @@ msgid ""
 "per turn. Be careful, as owning too many units can cause you to have "
 "negative income and lose gold each turn!"
 msgstr ""
+"Кожного ходу ви отримуєте 2 золотих, а також один золотий за кожне ваше "
+"село. Однак, від цього ще віднімається <i>утримання</i>. Ви можете "
+"утримувати таку кількість бійців, сума рівнів яких не перевищує число ваших "
+"сіл. При перевищенні цієї межі, вам доведеться платити по одному золотому за "
+"кожні зайві рівні. Будьте обережні, багато бійців під вашим командуванням "
+"може спричинити негативний прибуток, і ви будете втрачати золото кожного "
+"ходу!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:408
@@ -1268,6 +1289,10 @@ msgid ""
 "a side may be hidden; however, it is still useful to check this table when a "
 "scenario begins. You can access it in the <b>Menu</b> menu."
 msgstr ""
+"Панель стану показує подробиці про теперішній стан сторін та їхні початкові "
+"умови. Пелена та туман впливають на те, що ви можете там побачити, сторони "
+"можуть бути приховані. Та, у будь-якому разі, проглядати панель на початку "
+"сценарію корисно. Ви можете викликати її через пункт <b>Меню</b>."
 
 #. [message]: speaker=Galdrad
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:428
@@ -1315,6 +1340,11 @@ msgid ""
 "there; your Fighters will only suffer a 40% chance of being hit in return, "
 "while Shamans and Archers will only incur a 30% chance."
 msgstr ""
+"Ти можеш спробувати. Однак, ельфи (і орки) у воді мають поганий <i>захист</"
+"i>. Повільний перехід бродом дуже небезпечний; вороги матимуть шанс 80% "
+"влучити по тобі. Зважаючи на добрий захист ельфів у лісі, я раджу тобі "
+"триматися дерев і нападати на орків звідти; шанс влучення по твоїм воїнам "
+"буде 40%, а по шаманкам і лучникам — лише 30%."
 
 #. [message]: speaker=Galdrad
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:450
@@ -1397,6 +1427,9 @@ msgid ""
 "battle can turn quickly, and you don’t want to find yourself cut off from "
 "recruiting reinforcements."
 msgstr ""
+"Ти добре вчишся, Конраде. На ранній стадії гри тримай свого лідера у безпеці "
+"та неподалік від укриття. У стрімкого потоку битви непередбачувані повороти, "
+"і буде вельми кепсько побачити себе відрізаними від вербування свіжих сил."
 
 #. [message]: speaker=Galdrad
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:482
@@ -1406,6 +1439,9 @@ msgid ""
 "battle can turn quickly, and you don’t want to find yourself cut off from "
 "recruiting reinforcements."
 msgstr ""
+"Ти добре вчишся, Лі’сар. На ранній стадії гри тримай свого лідера у безпеці "
+"та неподалік від укриття. У стрімкого потоку битви непередбачувані повороти, "
+"і буде вельми кепсько побачити себе відрізаними від вербування свіжих сил."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:492
@@ -1449,7 +1485,7 @@ msgid ""
 msgstr ""
 "Ні. Як тільки ти наблизишся до супротивника, ти потрапиш в його <i>Зону "
 "Контролю</i> і не зможеш більше рухатися на цьому ходу. Якщо не хочеш, щоб "
-"твої солдати, переправляючись на острів, копирсалися у воді - доведеться "
+"твої солдати, переправляючись на острів, копирсалися у воді — доведеться "
 "його вбити."
 
 #. [message]: speaker=narrator
@@ -1467,7 +1503,7 @@ msgid ""
 "prevent stronger enemies from reaching key locations, such as villages, even "
 "if you have limited manpower."
 msgstr ""
-"<i>Зона контролю</i> - це клітинки безпосередньо навколо бійця. Коли ворог "
+"<i>Зона контролю</i> — це клітинки безпосередньо навколо бійця. Коли ворог "
 "стає на ці клітинки, то не може рухатись далі. (Виняток становлять бійці зі "
 "здібністю <i>авангардист</i>, на який не впливають зони контролю). Це можна "
 "використовувати для блокування сильних бійців противника, запобіганню "
@@ -1585,9 +1621,9 @@ msgid ""
 "at night. Your elvish warriors are <i>neutral</i>: unaffected by the time of "
 "day."
 msgstr ""
-"Обережно! Наступила ніч. Орки - <i>хаотичні</i>, вночі їх атака на 25% "
-"сильніша, а вдень - на 25% слабша. Ти з <i>порядних</i>, тому ти сильніший "
-"вдень. Эльфи - <i>нейтральні</i>: зміна дня і ночі їх не зачіпає."
+"Обережно! Наступила ніч. Орки — <i>хаотичні</i>, вночі їх атака на 25% "
+"сильніша, а вдень — на 25% слабша. Ти з <i>порядних</i>, тому ти сильніший "
+"вдень. Эльфи — <i>нейтральні</i>: зміна дня і ночі їх не зачіпає."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:696
@@ -1596,7 +1632,6 @@ msgstr "Час доби"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:698
-#, fuzzy
 msgid ""
 "During a scenario, the time of day will shift as turns pass. There are four "
 "<i>alignments</i> a unit may be: Lawful, Neutral, Chaotic, or Liminal. Each "
@@ -1605,10 +1640,9 @@ msgid ""
 "current time of day and who has the advantage."
 msgstr ""
 "Протягом сценарію міняється час доби. У бійця може бути один з чотирьох "
-"<i>alignments</i>: Порядний, Нейтральний, Хаотичний і Тіньовий. Кожний "
-"alignment дає різні штрафи і бонуси в залежно від часу доби. Щоб дізнатися "
-"поточний час доби і хто має перевагу, наведіть мишкою на картинку під "
-"мінікартою."
+"<i>типів</i>: Порядний, Нейтральний, Хаотичний і Тіньовий. Кожний тип дає "
+"різні штрафи і бонуси в залежно від часу доби. Щоб дізнатися поточний час "
+"доби і хто має перевагу, наведіть мишкою на картинку під мінікартою."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:709
@@ -1618,7 +1652,7 @@ msgid ""
 "unit)."
 msgstr ""
 "Не забудь відводити поранених в села. Цілителі можуть відновлювати лише 4 "
-"очки здоров'я, а села - 8 (максимум для будь-якого бійця)."
+"очки здоров'я, а села — 8 (максимум для будь-якого бійця)."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:719
@@ -1733,11 +1767,6 @@ msgstr ""
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:896
-#, fuzzy
-#| msgid ""
-#| "You are close to killing their leader! The unit who finishes him will "
-#| "gain 16 experience points because he is second level. Choose your "
-#| "attacking unit carefully!"
 msgid ""
 "You are close to killing their leader! Because he is second level, the unit "
 "who finishes him will gain 16 experience points. In a campaign, it’s "
@@ -1745,13 +1774,14 @@ msgid ""
 "the best chances to gain experience."
 msgstr ""
 "Ми майже перемогли їх лідера! Той, хто його доб'є, отримає 16 очок досвіду, "
-"оскільки супротивник - другого рівня. Вибирай ретельніше, кому ти довіриш "
-"прикінчити його!"
+"оскільки супротивник — другого рівня. У кампаніях дуже важливо правильно "
+"вибрати, яких бійців ви хочете підвищувати, і створювати таким бійцям всі "
+"можливості для швидкого набирання досвіду."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:900
 msgid "You have almost finished the tutorial"
-msgstr ""
+msgstr "Ви майже завершили вивчення посібника"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:902
@@ -1759,6 +1789,8 @@ msgid ""
 "In a campaign you may have ten or even twenty scenarios to build your army, "
 "but this tutorial will conclude after you defeat Thrag."
 msgstr ""
+"У кампаніях може бути десять або навіть двадцять сценаріїв, в яких можна "
+"вибудовувати свою армію. Але цей посібник завершиться перемогою над Трагом."
 
 #. [message]: speaker=Galdrad
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:928
@@ -1816,7 +1848,7 @@ msgid ""
 "Beware of the orc leader: he can do 36 hitpoints of damage at night! Attack "
 "with many units at once during the day."
 msgstr ""
-"Обережніше з їх ватажком - вночі він може нанести до 36 очок шкоди! Нападай "
+"Обережніше з їх ватажком — вночі він може нанести до 36 очок шкоди! Нападай "
 "на нього вдень і декількома бійцями відразу."
 
 #. [message]: speaker=unit
@@ -1955,6 +1987,11 @@ msgid ""
 "Incursion</i> you have an Elvish army, similarly to this tutorial, but with "
 "seven scenarios for your units to gain experience and advance levels."
 msgstr ""
+"Ви перемогли орків! Тепер ви можете спробувати пограти в одну з кампаній для "
+"новачків, в яких наявні поради зі стратегії. <i>Розповідь про Двох Братів</"
+"i> — найлегша кампанія та в неї рекомендується грати першою. У <i>Вторгненні "
+"орків</i> ми матимете армію ельфів, як і у цьому посібнику, але у ваших "
+"бійців буде сім сценаріїв щоб набратися досвіду та високих рівнів."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:1176
@@ -1962,6 +1999,8 @@ msgid ""
 "You can also refer to the in-game help browser if you ever need to refresh "
 "your memory on gameplay mechanics."
 msgstr ""
+"Також ви можете звернутися до довідки прямо в грі, якщо вам потрібно "
+"освіжити в пам'яті механіку ігрового процесу."
 
 #. [unit_type]: id=Fighter, race=human
 #: data/campaigns/tutorial/units/Fighter.cfg:4
